# hayasaka

./: README.md  pyproject.toml
.github/workflows/: publish.yaml  testing.yml
hayasaka/: __main__.py  chrome.py  cli.py  core.py  firefox.py
tests/: test_chrome.py  test_core.py  test_firefox.py
