[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hayasaka"
description = "Hayasaka saves the rendered HTML as an image."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
authors = [{ name = "nikkie", email = "takuyafjp+develop@gmail.com" }]
keywords = ["image", "HTML", "browser", "render", "screenshot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["helium<3.1", "urllib3<2"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/ftnext/hayasaka"

[project.scripts]
hayasaka-cli = "hayasaka.__main__:main"

[project.optional-dependencies]
dev = [
    "taskipy",
    "autoflake",
    "pyupgrade",
    "black",
    "isort",
    "pytest",
    "pytest-randomly",
    "flake8",
    "mypy",
]

[tool.setuptools.dynamic]
version = { attr = "hayasaka.__version__" }

[tool.taskipy.tasks]
pre_test = "task format"
test = "pytest -v --doctest-modules"
post_test = "task check"
format = "task format_autoflake && task format_pyupgrade && task format_black && task format_isort"
format_autoflake = "autoflake --in-place --remove-all-unused-imports $(find hayasaka tests -name '*.py') setup.py"
format_pyupgrade = "pyupgrade $(find hayasaka tests -name '*.py') setup.py"
format_black = "black -l 79 hayasaka tests setup.py"
format_isort = "isort --profile black -l 79 hayasaka tests setup.py"
check = "task check_flake8 && task check_mypy"
check_flake8 = "flake8 hayasaka tests"
check_mypy = "mypy hayasaka tests --ignore-missing-imports"
